# ACG

./: ACG_Lab2_205574.pages
ACG-Framework-Student/src/: application.cpp  application.h  scenenode.cpp
ACG-Framework-Student/visualstudio15/VS2015/: visualstudio.vcxproj
RTACG_Students 2/: CMakeLists.txt
RTACG_Students 2/VisualStudio2015/RTACG/: RTIS_V2.vcxproj  RTIS_V2.vcxproj.filters
RTACG_Students 2/VisualStudio2015/RTACG/x64/Debug/: RTIS_V2.vcxproj.FileListAbsolute.txt  RT_ACG.exe.recipe  RT_ACG.ilk  vc143.idb
RTACG_Students 2/VisualStudio2015/RTACG/x64/Debug/RT_ACG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RT_ACG.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RTACG_Students 2/src/: main.cpp
RTACG_Students 2/src/cameras/: perspective.h
RTACG_Students 2/src/core/: bitmap.h  matrix4x4.cpp  matrix4x4.h  ray.h  utils.cpp  vector3d.h
RTACG_Students 2/src/materials/: material.cpp  material.h  mirror.cpp  mirror.h  phong.cpp  phong.h  transmissive.cpp  transmissive.h
RTACG_Students 2/src/shaders/: depthshader.cpp  depthshader.h  directshader.cpp  directshader.h  globalshader.cpp  globalshader.h  intersectionshader.cpp  normalshader.cpp  normalshader.h
